@@ -1,3 +1,13 @@
+2011-09-21  Sergey Glazunov  <serg.glazunov@gmail.com>
+
+        [Chromium] Protect message ports from being deleted in V8MessageEvent::portsAccessorGetter
+        https://bugs.webkit.org/show_bug.cgi?id=68584
+
+        Reviewed by Adam Barth.
+
+        * fast/dom/message-port-deleted-by-accessor-expected.txt: Added.
+        * fast/dom/message-port-deleted-by-accessor.html: Added.
+
 2011-09-21  David Levin  <levin@chromium.org>
 
         [chromium] Rebaselines for passing tests and expectation updates/narrowing.
